chore: Fixed homepage issue on mobile

--- a/src/pages/homepage.css
+++ b/src/pages/homepage.css
@@ -83,7 +83,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   max-width: 1600px;
-  margin: auto;
+  margin: 5rem auto;
 }
 #blog figure { margin: 0 auto }
 #blog a:hover { text-decoration: none; }
@@ -108,7 +108,13 @@
   margin: 0;
   padding: 0;
 }
-
+#blog div.single h3 {
+  margin: 0;
+  line-height: 1.25;
+}
+#blog div.single p {
+  margin: 0;
+}
 #blog div.many h3 {
   margin: 0;
   padding: 0 0 0 1rem;
@@ -152,5 +158,16 @@
   #homepage > header {
     background-size: 350%;
     background-position: 15% 95%;
+  }
+  #blog > div {
+    width: calc(100% - 2rem);
+    padding: 1rem;
+  }
+  #blog div.many a.image {
+    display: none;
+  }
+  #blog div.many a.text h3,
+  #blog div.many a.text p {
+    padding: 0;
   }
 }
